--- a/public/home.html
+++ b/public/home.html
@@ -11,8 +11,13 @@
     />
     <script
       type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js">
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TQMQ3VZ6');
+</script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,9 +36,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+   
   </head>
   <body>
     <!--nav area-->
+    noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQMQ3VZ6"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container-fluid sticky-top bg-white shadow-sm navbarbg">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light py-3 py-lg-0">
